www/css/styles.css
@font-face {
  font-family: 'Berkshire Swash';
  font-style: normal;
  font-weight: 400;
  src: local("Berkshire Swash Regular"), local("BerkshireSwash-Regular"), url("../fonts/BerkshireSwash-Regular.woff2") format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }

body {
  margin: 0;
  overflow: hidden;
  user-select: none;
  font-family: 'Berkshire Swash', serif;
  font-size: 16px;
  text-transform: unset; }

*, *::after, *::before {
  box-sizing: border-box; }

.container {
  width: 100vw;
  height: 100vh;
  display: flex;
  position: relative;
  flex-direction: column;
  background-color: #090909; }

.compass-container {
  display: flex;
  position: relative;
  height: 100vmin;
  width: 100vmin;
  flex: 3; }

.ring-container {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  width: 100%;
  height: 100%; }

.ring {
  position: relative;
  margin: 0;
  padding: 0;
  border-radius: 50%;
  list-style: none; }
  .ring > li {
    position: absolute;
    top: 50%;
    left: 50%;
    max-width: 100%;
    font-size: 4vmin;
    color: white;
    width: 1.5em;
    height: 1.5em;
    margin: -0.75em;
    transition: 0.15s; }
    .ring > li > span {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      height: 100%;
      border-radius: 50%;
      transition: 0.15s; }
    .ring > li.selected > span {
      transform: scale(1.5, 1.5);
      background-color: rgba(255, 255, 255, 0.15); }
    .ring > li.requested > span {
      transform: scale(1.5, 1.5);
      background-color: rgba(155, 230, 255, 0.75); }
    .ring > li.responded > span {
      transform: scale(1.5, 1.5);
      background-color: yellow !important; }
  .ring::before {
    content: ' ';
    position: absolute;
    width: 116%;
    height: 116%;
    background-color: #49241b;
    border-radius: 50%;
    top: -8%;
    right: -8%;
    border: 0.9vmin solid #906732; }
  .ring::after {
    content: ' ';
    background-color: #906732;
    position: absolute;
    width: 87%;
    height: 87%;
    border-radius: 50%;
    top: 6.5%;
    right: 6.5%; }

.dials-container {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center; }

#dials {
  display: flex;
  width: 0;
  height: 0;
  align-items: center; }

.dial {
  position: absolute;
  transform: rotateZ(0deg);
  transform-origin: left;
  transform-origin: 2.5vmin;
  cursor: pointer;
  margin-left: -2.5vmin; }

.dial-1 {
  width: 30vmin;
  height: 8vmin;
  background-image: url("../img/clock-hand2-inactive.png");
  background-size: contain;
  background-position: center left;
  background-repeat: no-repeat; }
  .dial-1.active {
    background-image: url("../img/clock-hand2-active.png"); }

.dial-2 {
  width: 30vmin;
  height: 8vmin;
  background-image: url("../img/clock-hand2-inactive.png");
  background-size: contain;
  background-position: center left;
  background-repeat: no-repeat; }
  .dial-2.active {
    background-image: url("../img/clock-hand2-active.png"); }

.dial-3 {
  width: 30vmin;
  height: 8vmin;
  background-image: url("../img/clock-hand2-inactive.png");
  background-size: contain;
  background-position: center left;
  background-repeat: no-repeat; }
  .dial-3.active {
    background-image: url("../img/clock-hand2-active.png"); }

.dial-4 {
  width: 40vmin;
  height: 6vmin;
  background-image: url("../img/clock-hand-inactive.png");
  background-size: contain;
  background-position: center left;
  background-repeat: no-repeat; }
  .dial-4.active {
    background-image: url("../img/clock-hand-active.png"); }

#emoji-output {
  font-size: 15vmin;
  line-height: 15vmin;
  color: white; }

.text-container {
  text-align: center;
  color: white;
  flex: 1;
  display: flex;
  flex-direction: column; }
  .text-container hr {
    width: 60%;
    border: 1px solid #a9a9a977; }

.text-box {
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 2em; }

.instruction-text {
  font-size: 1.75em; }

.final-text {
  font-size: 8vmin;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: black;
  z-index: 20000;
  padding: 6vmin; }

#flavor-text-output {
  margin-top: 1em;
  margin-left: 2em;
  margin-right: 2em;
  color: #aaa;
  font-size: 1.25em; }

@media (orientation: portrait) {
  .text-container {
    max-height: 400px;
    min-height: 250px; } }

@media (orientation: landscape) {
  .container {
    flex-direction: row; }
  .text-container {
    flex-direction: row;
    align-items: center;
    max-width: 400px;
    min-width: 250px; }
    .text-container hr {
      height: 60%;
      width: 0; } }

.hidden {
  display: none; }

.dials-cap {
  position: absolute;
  width: 5.25vmin;
  height: 5.25vmin;
  margin-left: -2.625vmin;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #8d3200;
  z-index: 2000; }
  .dials-cap::after {
    width: 1.5vmin;
    height: 1.5vmin;
    content: '';
    position: absolute;
    background-color: #906732;
    border-radius: 50%; }

.final-buttons {
  margin-top: 0.25em; }

.final-buttons button {
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  border: 0;
  background-color: #2a2a2a;
  color: white;
  font-size: 1.5rem;
  font-family: 'Berkshire Swash', serif;
  cursor: pointer;
  padding: 0.5em 1em;
  margin: 0.25em;
  height: 50px;
  line-height: 25px;
  border-radius: 25px;
  outline: none; }
  .final-buttons button:focus {
    box-shadow: 0 0 10px 0 #5656e2; }
  .final-buttons button:hover {
    color: yellow; }

#final-emoji-1 {
  display: block;
  margin: 0.75em;
  margin-top: 1em;
  font-size: 10vmin; }

.emoji-table {
  margin-top: 1em;
  margin-bottom: 1em; }

.emoji-table-row > td {
  padding-bottom: 2vmin; }

.emoji-table-cell {
  vertical-align: middle; }

.emoji-table-description {
  color: #aaa;
  font-size: 4vmin;
  text-align: left; }

.emoji-table-symbol {
  margin-right: 0.5em;
  font-size: 10vmin; }

